Updated inline r code for Fulton K

--- a/BBLReport.Rmd
+++ b/BBLReport.Rmd
@@ -1,4 +1,5 @@
 
+
 \pagebreak
 
 Abundance, Age, and Size of Rainbow Trout at Black Bear Lake, Southeast Alaska
@@ -80,6 +81,7 @@ box()
 ### Study Area
 
 Black Bear Lake is a deep cirque lake located in steep mountainous terrain near Klawock, Prince of Wales Island, Southeast Alaska (Figure 1, and 2). The lake is 2.4 km long and varies in width from 150 to 643 m. It has a surface area of 87 ha, a volume of 27.14 ha^3 and a maximum depth of 69 m. The shoreline consists primarily of steep bedrock and large boulder, although there are some gravels suitable for spawning near the lake outlet and other small areas around the shoreline. The outlet stream falls approximately 427 m over a distance of approximately 530 m to the lower valley floor and forms a source for Black Bear Creek <cite>(HDR Engineering 1991)</cite>, which drains into Black Lake. The USFWS stocked Black Bear Lake with rainbow trout from Washington State in 1956 to initiate a sport fishery.
+
 
 ![Black Bear Lake](D:/R/ESR505/bbl.jpg)
 
@@ -238,7 +240,7 @@ summary(weight)
 
 #### *Population*
 
-During the marking event a total of 477 rainbow trout between 180 and 410 mm FL were marked and released alive. During the recapture event 296 rainbow trout between 46 and 409 mm FL were examined, of which 142 fish had been marked during the marking event. There was no tag loss detected during the experiment.
+During the marking event a total of `r round((N),0)` rainbow trout between 180 and 410 mm FL were marked and released alive. During the recapture event `r c` rainbow trout between 46 and 409 mm FL were examined, of which `r r` fish had been marked during the marking event. There was no tag loss detected during the experiment.
 
 A two-sample Kolmogrov-Smirnov (KS) test <cite>(Zar 1996)</cite> was used to detect significant differences in the lengths of fish >= 180 mm FL caught during the different sampling events. The length-distributions of rainbow trout initially captured during the marking event and then recaptured during the recapture event (Figure 11, top panel) were not significantly different (KS test, Dmax = 0.0686, P = 0.82). Therefore, stratification based on fish size for the purpose of estimating population size was not required.
 
@@ -276,7 +278,7 @@ K <-  na.omit(rbt$FultonK)
 summary(K)
 ```
 
-The condition of most fish caught during this study were between 0.98 and 1.11 (Figure 7), while the mean condition for the sampled population was 1.06.   Even though a comparison between years indicates improved condition, the relative condition of the fish compared to other healthy populations is poor. This is primarily a result of very little predation and limited food due to an oligotrophic isolated alpine cirque lake habitat.
+The condition of most fish caught during this study were between `r quantile(rbt$FultonK, .25)` and `r quantile(rbt$FultonK, .75)` (Figure 7), while the mean condition for the sampled population was `r mean((rbt$FultonK),2)`.   Even though a comparison between years indicates improved condition, the relative condition of the fish compared to other healthy populations is poor. This is primarily a result of very little predation and limited food due to an oligotrophic isolated alpine cirque lake habitat.
 
 ```{r plot7_FultonK, fig.cap="Fulton Conditon frequency histogram."}
 K <-  na.omit(rbt$FultonK)
@@ -340,8 +342,8 @@ In 2002, Black Bear Lake had the sixth largest (N = `r round((N), 0)`) rainbow t
 ```{r pdf_file, include=FALSE}
 # The below code converts markdown file to pdf, or Word docx using the pander package.
 
-require(pander)
-Pandoc.convert(f="BBLreport.md", format="pdf", options="-s --toc -V geometry:margin=.75in")
+# require(pander)
+# Pandoc.convert(f="BBLreport.md", format="pdf", options="-s --toc -V geometry:margin=.75in")
 
 # Pandoc.convert(f="BBLreport.md", format="docx", options="-s")
 ```
